--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <ul class="hidden md:flex space-x-6">
             <li><a href="#hero" class="cursor-pointer hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Home</a></li>
             <li><a href="#about" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">About</a></li>
-            <li><a href="#services" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Services</a></li>
             <li><a href="#contact" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Contact</a></li>
+            <li><a href="#sign up" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Sign up</a></li>
         </ul>
         <div class="md:hidden text-2xl cursor-pointer">&#9776;</div>
     </nav>
@@ -29,100 +29,108 @@
         <div class="bg-black bg-opacity-50 p-8 rounded-lg">
             <h1 class="text-4xl font-bold">Welcome to CYMAN WEAR</h1>
             <p class="text-lg">We are a company that gives you the best wear of all times.</p>
-            <a href="#contact" class="inline-block mt-4 bg-red-500 text-white px-6 py-2 rounded-full">Contact Us</a>
+            <a href="#contact" class="inline-block mt-4 bg-red-500 text-white px-6 py-2 rounded-full">View website</a>
         </div>
+        <div class="absolute bottom-0 left-0 right-0 p-8">
+            <form action="#" method="POST" class="flex justify-center">
+                <input type="text" name="search" class="w-96 p-3 rounded-l-full focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="Search for shoes">
+                <button type="submit" class="bg-red-500 text-white p-3 rounded-r-full hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500">
+                    <i class="fas fa-search"></i>
+                </button>
+          </form>
+        </div>
+            
+
     </header>
    <!-- Main Section -->
-<main class="px-6 py-10 text-center">
+<main class="px-6 py-10 text-center text-gray-900">
     <section id="about" class="mb-10 cursor-pointer">
         <h2>About Us</h2>
-        <p>We specialize in sneakers and boots of the best quality made originally.</p>
+        <p>We specialize in sneakers and boots of the best quality made originally.We do deliveries counrywide for our esteemed customers,feel free to visit any of our stores.</p>
     </section>
-    <section id="services" class="p-8">
-        <h2 class="text-2xl font-bold mb-8">Our Services</h2>
-        <div class="grid grid-cols-8 sm:grid-cols-2 md:grid-cols-3 gap-6">
-            <div class="card relative bg-white shadow-lg rounded-lg overflow-hidden">
-                <div class="image-slot">
-                    <img src="assets/pexels-nikola-kolev-2438142-18370955.jpg" alt="Web Development">
-                </div>
-                <div class="p-6">
-                    <h3 class="text-lg font-semibold">Web Development</h3>
-                </div>
-                <div class="content absolute inset-0 bg-black bg-opacity-75 text-white opacity-0 flex items-center justify-center transition-opacity duration-300">
-                    <p>We build responsive and user-friendly websites that are tailored to your needs.</p>
-                </div>
+    <div class="container">
+        <div class="flex justify-center gap-8">
+          <div class="card relative bg-white p-8 rounded-lg shadow-lg w-96">
+            <img src="assets/pexels-solliefoto-298864.jpg" alt="Shoe 1" class="w-full rounded-lg">
+            <div class="content absolute bottom-0 w-full p-4 bg-white bg-opacity-90 rounded-b-lg transition duration-300 opacity-0 transform -translate-y-8">
+              <h3 class="text-xl font-semibold">Boots</h3>
+              <p class="text-gray-600">The best boots in town.</p>
+              <a href="#" class="inline-block mt-4 bg-red-500 text-white px-6 py-2 rounded-full">View</a>
             </div>
-            <div class="card relative bg-white shadow-lg rounded-lg overflow-hidden">
-                <div class="image-slot">
-                    <img src="assets/pexels-pixabay-34098.jpg" alt="Graphic Design">
-                </div>
-                <div class="p-6">
-                    <h3 class="text-lg font-semibold">Graphic Design</h3>
-                </div>
-                <div class="content absolute inset-0 bg-black bg-opacity-75 text-white opacity-0 flex items-center justify-center transition-opacity duration-300">
-                    <p>We create beautiful and modern designs for your website, app, and print needs.</p>
-                </div>
+          </div>
+          <div class="card relative bg-white p-8 rounded-lg shadow-lg w-96">
+            <img src="assets/pexels-mnzoutfits-1598508.jpg" alt="Shoe 2" class="w-full rounded-lg">
+            <div class="content absolute bottom-0 w-full p-4 bg-white bg-opacity-90 rounded-b-lg transition duration-300 opacity-0 transform -translate-y-8">
+              <h3 class="text-xl font-semibold">Sneakers</h3>
+              <p class="text-gray-600">The best sneakers in town.</p>
+              <a href="#" class="inline-block mt-4 bg-red-500 text-white px-6 py-2 rounded-full">View</a>
             </div>
-            <div class="card relative bg-white shadow-lg rounded-lg overflow-hidden">
-                <div class="image-slot">
-                    <img src="assets/pexels-futurekiiid-3551498.jpg" alt="Digital Marketing">
-                </div>
-                <div class="p-6">
-                    <h3 class="text-lg font-semibold">Digital Marketing</h3>
-                </div>
-                <div class="content absolute inset-0 bg-black bg-opacity-75 text-white opacity-0 flex items-center justify-center transition-opacity duration-300">
-                    <p>We help you market and promote your products and services online.</p>
-                </div>
-            </div>
+          </div>
         </div>
-    </section>
+      </div>
+    <!-- Checkboxes for Shoe Types -->
+    <div class="flex justify-center gap-8 my-4">
+        <label class="flex items-center text-lg">
+            <input type="checkbox" class="shoe-type form-checkbox text-blue-600" data-type="sneakers">
+            <span class="ml-2">Sneakers</span>
+        </label>
+        <label class="flex items-center text-lg">
+            <input type="checkbox" class="shoe-type form-checkbox text-blue-600" data-type="boots">
+            <span class="ml-2">Boots</span>
+        </label>
+        <label class="flex items-center text-lg">
+            <input type="checkbox" class="shoe-type form-checkbox text-blue-600" data-type="sandals">
+            <span class="ml-2">Sandals</span>
+        </label>
+        <label class="flex items-center text-lg">
+            <input type="checkbox" class="shoe-type form-checkbox text-blue-600" data-type="loafers">
+            <span class="ml-2">Loafers</span>
+        </label>
+        <label class="flex items-center text-lg">
+            <input type="checkbox" class="shoe-type form-checkbox text-blue-600" data-type="heels">
+            <span class="ml-2">Heels</span>
+        </label>
+    </div>
+    <form action="#" method="POST">
+      <!-- Full Name -->
+      <div class="mb-4">
+        <label for="full-name" class="block text-sm font-semibold text-red-300">Full Name</label>
+        <input type="text" id="full-name" name="full-name" required class="w-full p-3 mt-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter your full name">
+      </div>
+
+      <!-- Email -->
+      <div class="mb-4">
+        <label for="email" class="block text-sm font-semibold text-red-300">Email</label>
+        <input type="email" id="email" name="email" required class="w-full p-3 mt-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter your email">
+      </div>
+
+      <!-- Password -->
+      <div class="mb-4">
+        <label for="password" class="block text-sm font-semibold text-red-300">Password</label>
+        <input type="password" id="password" name="password" required class="w-full p-3 mt-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Create a password">
+      </div>
+
+      <!-- Confirm Password -->
+      <div class="mb-4">
+        <label for="confirm-password" class="block text-sm font-semibold text-red-300">Confirm Password</label>
+        <input type="password" id="confirm-password" name="confirm-password" required class="w-full p-3 mt-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Confirm your password">
+      </div>
+
+      <!-- Sign Up Button -->
+      <div class="mb-6">
+        <button type="submit" class="w-full bg-blue-500 text-white p-3 rounded-md font-semibold hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
+          Sign Up
+        </button>
+      </div>
+
+      <!-- Login Link -->
+      <p class="text-sm text-center text-white-600">Already have an account? <a href="#" class="text-blue-500 hover:text-blue-700">Log in</a></p>
+    </form>
+  </div>
 
 
-    <section bg-gray-100 p-8>
-        <h2 id="contact" class="text-2xl font-bold mb-8">Contact Us</h2>
-        <form action="submit.php" method="POST" class="flex flex-col items-center rounded-lg"required>
-            <input type="text" name="name" placeholder="Name" class="w-full p-2 mb-4 rounded-md font-bold"required>
-            <input type="email" name="email" placeholder="Email" class="w-full p-2 mb-4 rounded-md font-bold"required>
-            <textarea name="message" placeholder="Message" class="w-full p-2 mb-4 rounded-md font-bold"required></textarea>
-            <button type="submit" class="bg-blue-500 text-white px-6 py-2 rounded-full font-bold mt-4 mb-4">Submit</button>
-        </form>
-    </section>
-    <!-- Footer section -->
-     <footer class="bg-gray-900 text-white py-8">
-        <div class="max-w-6xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-8">
-            <!-- About services -->
-             <div>
-                <h3 class="text-lg font-semibold mb-2">About</h3>
-                <p class="text-gray-400">We are dedicated to giving you the best looks at all times</p>
-             </div>
-                <!-- Quick links -->
-                 <div>
-                    <h3 class="text-lg font-semibold mb-2">Quick links</h3>
-                    <ul class="space-y-2">
-                        <li><a href="#hero" class="text-gray-400 hover:text-white transition">Home</a></li>
-                        <li><a href="#about" class="text-gray-400 hover:text-white transition">About</a></li>
-                        <li><a href="#services" class="text-gray-400 hover:text-white transition">Services</a></li>
-                        <li><a href="#contact" class="text-gray-400 hover:text-white transition">Contact</a></li>
-                    </ul>
 
-                 </div>
-                 <!-- contact section-->
-                  <div>
-                    <h3 class="text-lg font-semibold mb-2">Contact</h3>
-                    <p class="text-gray-400">Email: Emmanuelmulongo46@gmail.com</p>
-                    <p class="text-gray-400">Phone: +254745792950</p>
-                  </div>
-                  <div>
-                    <h3 class="text-lg font-semibold mb-2">Follow us</h3>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-facebook"></i></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-x-twitter"></i></i></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-instagram"></i></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-linkedin"></i></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-threads"></i></i></i></a>
-                  </div>
-        </div>
-     </footer>
+   
 
 </main>
 
