linked the sign-up form

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#hero" class="cursor-pointer hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Home</a></li>
             <li><a href="#about" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">About</a></li>
             <li><a href="#contact" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Contact</a></li>
-            <li><a href="sign up .html" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Sign up</a></li>
+            <li><a href="sign-up.html" class="hover:text-white transition relative after:content-[''] after:block after:h-0.5 after:w-full after:bg-red-500 after:scale-x-0 after:transition-transform after:duration-300 hover:after:scale-x-100">Sign up</a></li>
         </ul>
         <div class="md:hidden text-2xl cursor-pointer">&#9776;</div>
     </nav>
@@ -161,8 +161,8 @@
               <div class="image-wrapper">
                 <img src="assets/pexels-craytive-1478442.jpg" alt="Shoe 2" class="gallery-image rounded-lg shadow-lg">
                 <div class="overlay">
-                  <p class="shoe-name">Nike</p>
-                  <p class="shoe-price">ksh 2500</p>
+                  <h1 class="shoe-name">Nike</h1>
+                  <p class="text-black mt-6 mb-6">ksh 2500</p>
                 </div>
               </div>
             </div>
