--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="bg-black bg-opacity-50 p-8 rounded-lg">
             <h1 class="text-4xl font-bold">Welcome to CYMAN WEAR</h1>
             <p class="text-lg">We are a company that gives you the best wear of all times.</p>
-           <li><a href="View Products.html" class="inline-block mt-4 bg-red-500 text-white px-6 py-2 rounded-full">View Products</a></li>
+           <li><a href="View-Products.html" class="inline-block mt-4 bg-red-500 text-white px-6 py-2 rounded-full">View-Products</a></li>
         </div>
         
     </header>
