added a pop up message

--- a/sign-up.html
+++ b/sign-up.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
+</head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up </title>
@@ -12,7 +14,10 @@
         <div class="bg-gray-800 rounded-lg shadow-lg p-8 w-full max-w-md">
             <h1 class="text-3xl font-bold text-center mb-6">Sign Up</h1>
             <p class="text-gray-400 text-center mb-8">Shop with us and experience our service</p>
-            <form action="#" method="POST" class="space-y-6">
+        
+                <form action="#" method="POST" class="space-y-6" onsubmit="welcomeMsg()">
+                    ...
+                
                 <!-- Username -->
                 <div>
                     <label for="username" class="block text-sm font-medium text-gray-300">Username</label>
