--- a/contact.html
+++ b/contact.html
@@ -254,7 +254,7 @@
     <nav class="navbar">
         <div class="logo">CYMAN Wear</div>
         <div class="nav-links">
-            <a href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
