--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
 
 
 
+            <div id="message" style="display:none;"></div>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
